--- a/src/components/ExpandCard/ExpandCard.css
+++ b/src/components/ExpandCard/ExpandCard.css
@@ -5,7 +5,7 @@
 .containerCard {
     display: flex;
     flex-direction: row;
-    gap: 2rem;
+    gap: 1rem;
     background-color: #FFF;
     padding: 5rem;
     border-radius: 10px;
@@ -17,25 +17,30 @@
     flex-direction: column;
     width: 60%;
 }
-.ruteCard{
+
+.ruteCard {
     font-size: 20px;
     font-weight: 600;
 }
-.boxImage{
+
+.boxImage {
     display: flex;
     flex-direction: row;
 
 }
-.listImage{
+
+.listImage {
     display: flex;
     flex-direction: column;
 }
-.selectImage{
+
+.selectImage {
     width: 120px;
     height: 120px;
     border-radius: 5px;
 }
-.imageSelected{
+
+.imageSelected {
     width: 500px;
     height: 500px;
     border-radius: 5px;
@@ -44,4 +49,103 @@
 .boxInfoCard {
     display: flex;
     flex-direction: column;
+    height: 93%;
+    width: 70%;
+    justify-content: space-between;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    height: fit-content;
+    justify-content: space-between;
+    border-bottom: 2px solid #898484;
+}
+
+.textInfo {
+    font-size: 25px;
+    width: 80%;
+    text-wrap: wrap;
+}
+
+.priceInfo {
+    font-size: 45px;
+    font-weight: 520;
+}
+
+.newPrice {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
+    padding-block: 1rem;
+}
+
+.newPriceText {
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.porcent {
+    font-size: 20px;
+}
+.details{
+    border-bottom: 2px solid #898484;
+}
+.titleDetails{
+    margin: 0;
+    padding-bottom: 1rem;
+}
+.detailsSize {
+    display: flex;
+    flex-direction: row;
+}
+
+.boxSize {
+    border: 1px solid green;
+    border-radius: 5px;
+    margin-right: 1rem;
+    width: 20%;
+    padding: 0.3rem;
+    font-weight: 600;
+    font-size: 20px;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center0;
+}
+
+.boxStock{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-block: 1rem;
+    gap: 1rem;
+}
+
+.textStock{
+    font-size: 16px;
+    font-weight: 600;
+}
+.stockNumber{
+    padding: 0.2rem;
+    border: 1px solid black;
+    border-radius: 5px;
+    font-size: 12px;
+    font-weight: 500;
+}
+.btnConsult{
+    background-color: transparent;
+    font-weight: 25px;
+    height: 3rem;
+    border-radius: 5px;
+    font-weight: 600;
+    background-color: green;
+    color: white;
+    cursor: pointer;
+}
+.btnConsult:hover{
+    background-color: white;
+    color: black;
 }
