--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,8 +6,14 @@
 }
 
 .infoGeneral {
+    display: flex;
+    justify-content: center;
     margin: 0 auto;
-    padding-block: 1rem;
+    padding-block: 0.5rem;
+    background-color: black;
+    color: white;
+    height: fit-content;
+    width: 100%;
 }
 
 mark {
