--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
 #root {
     height: 100vh;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1rem;
 }
 
 li {
@@ -17,8 +21,4 @@ li {
 a {
     color: black;
     text-decoration: none;
-}
-
-a:hover {
-    color: #EBEBEB;
 }
