--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -1,15 +1,19 @@
-.bannerSection{
+.bannerSection {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-}
-.imageBanner{
-    max-width: 100%;
-    height: auto;
-    padding-inline: 2rem;
-}
-.imageBanner:hover{
+    padding: 2rem; /* Aplica el padding al contenedor */
+    box-sizing: border-box; /* Incluye el padding en el tamaño total del contenedor */
+    width: 100%; /* Asegura que el contenedor ocupe el 100% del ancho */
+  }
+  
+  .imageBanner {
+    max-width: 100%; /* Asegura que la imagen no exceda el ancho del contenedor */
+    height: auto; /* Mantiene la proporción de la imagen */
+  }
+  
+  .imageBanner:hover {
     opacity: 80%;
     cursor: pointer;
-}
+  }
+  
