--- a/src/components/Layouts/Footer/Footer.css
+++ b/src/components/Layouts/Footer/Footer.css
@@ -7,10 +7,47 @@
     justify-content: space-between;
 }
 
+.networksFooter{
+    width: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
+    padding: 1rem 10rem;
+}
+
+.boxContactFooter{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+.listContactFooter{
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    
+}
+
+.itemListFooter{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    padding-block: 0.4rem;
+    gap: 0.3rem;
+   
+}
+.boxPayFooter{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .infoFooter{
     background-color: black;
     height: 3rem;
+    
     color: white;
     display: flex;
     flex-direction: row;
