--- a/src/components/Product/Card/Card.css
+++ b/src/components/Product/Card/Card.css
@@ -1,4 +1,3 @@
-/* Card.css */
 .boxCard {
     display: flex;
     flex-direction: column;
@@ -28,9 +27,23 @@
     /* Espacio entre el nombre y el precio */
 }
 
+.priceContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.originalPrice {
+    color: red;
+    text-decoration: line-through;
+    font-size: 0.9rem;
+    margin-bottom: 0.25rem;
+}
+
 .cardPrice {
     color: black;
     font-weight: 600;
+    font-size: 1.2rem;
 }
 
 @media (max-width:480px) {
