--- a/src/components/Product/Card/Card.css
+++ b/src/components/Product/Card/Card.css
@@ -46,6 +46,14 @@
     font-size: 1.2rem;
 }
 
+.discountPercentage {
+    color: green;
+    font-weight: 600;
+    font-size: 1rem;
+    margin-top: 0.25rem;
+    padding: 0.5rem;
+}
+
 @media (max-width:480px) {
     .boxCard {
         height: auto;
