--- a/src/components/pages/user/Login/Login.css
+++ b/src/components/pages/user/Login/Login.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 50vh;
+    padding: 1rem;
 }
 
 .formLogin {
@@ -26,13 +27,19 @@
     box-sizing: border-box;
 }
 
+.inputLogin:focus {
+    outline: none;
+    border: 2px solid #25D366;
+
+}
+
 .inputLogin.error {
     border-color: red;
 }
 
 .btnLogin {
     padding: 0.75rem;
-    background-color: #007bff;
+    background-color: black;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -42,13 +49,12 @@
 }
 
 .btnLogin:hover {
-    background-color: #0056b3;
+    background-color: #25D366;
 }
 
 .errorMessage {
     color: red;
-    font-size: 0.875rem;
-    margin-bottom: 1rem;
+
 }
 
 .serverError {
@@ -56,6 +62,28 @@
     font-size: 1rem;
     margin-bottom: 1rem;
     text-align: center;
+}
+
+.divForm {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0.5rem;
+}
+
+.linkRegister {
+    margin-top: 1rem;
+    text-align: center;
+}
+
+.linkRegister {
+    color: grey;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.linkRegister:hover {
+    color: #25D366;
 }
 
 @media (max-width: 480px) {
