--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,14 +2,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: rgb(251, 249, 249);
     max-width: 20rem;
     height: 25rem;
     border-radius: 10px;
     box-sizing: content-box;
 }
-
+.cardLink{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 /* Estilos de la imagen y el texto de la tarjeta */
 .cardImage {
     width: 90%;
