--- a/src/components/pages/admin/Dashboard.css
+++ b/src/components/pages/admin/Dashboard.css
@@ -51,8 +51,13 @@
   display: flex;
   flex-direction: row;
 }
+.sizes{
+  display: flex;
+  flex-direction: row;
+}
 .sizes span{
   padding-inline: 0.2rem;
+
 }
 
 .icon {
