--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,3 +1,6 @@
+/* Card.css */
+
+/* Estilos existentes */
 .boxCard {
     display: flex;
     flex-direction: column;
@@ -8,12 +11,16 @@
     height: 25rem;
     border-radius: 10px;
     box-sizing: content-box;
+    position: relative; /* Necesario para la superposición */
+    transition: opacity 0.3s ease; /* Suaviza el cambio de opacidad */
 }
-.cardLink{
+
+.cardLink {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 /* Estilos de la imagen y el texto de la tarjeta */
 .cardImage {
     width: 90%;
@@ -58,7 +65,30 @@
     padding: 0.5rem;
 }
 
-@media (max-width:480px) {
+/* Nuevo CSS para "Sin Stock" */
+.out-of-stock {
+    opacity: 0.5; /* Reduce la opacidad para indicar que está agotado */
+}
+
+.out-of-stock-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.6); /* Fondo semi-transparente negro */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 1.5em;
+    font-weight: bold;
+    border-radius: 10px; /* Coincide con el border-radius de la tarjeta */
+    pointer-events: none; /* Evita que la superposición interfiera con los clics */
+}
+
+/* Responsividad */
+@media (max-width: 480px) {
     .boxCard {
         height: auto;
     }
