--- a/src/components/pages/user/Login/Login.css
+++ b/src/components/pages/user/Login/Login.css
@@ -86,6 +86,28 @@
     color: #25D366;
 }
 
+.password-field {
+    position: relative;
+    margin-bottom: 1em; /* Ajusta el margen si es necesario */
+}
+
+.inputLogin {
+    width: 100%;
+    padding: 0.5em;
+    padding-right: 2.5em; /* Asegura suficiente espacio para el ícono */
+}
+
+.password-toggle {
+    position: absolute;
+    top: 35%;
+    right: 0.5em;
+    transform: translateY(-50%);
+    cursor: pointer;
+    font-size: 1.2em; /* Ajusta el tamaño según tu diseño */
+    color: #888; /* Ajusta el color si es necesario */
+    z-index: 10; /* Asegura que el ícono esté sobre el campo de entrada */
+    pointer-events: all; /* Asegura que el ícono sea clickeable */
+}
 @media (max-width: 480px) {
     .formLogin {
         padding: 1rem;
