--- a/src/components/pages/ProductDetail/ProductDetail.css
+++ b/src/components/pages/ProductDetail/ProductDetail.css
@@ -182,11 +182,33 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    width: 90%;
+    width: 100%;
 }
 
 .btnConsult img {
     margin-right: 10px;
+}
+.actions {
+    display: flex;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.btnAddToCart {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.btnAddToCart:hover {
+    background-color: #0056b3;
 }
 
 @media (min-width: 768px) {
@@ -203,4 +225,18 @@
     .boxInfoCard {
         flex: 1;
     }
+   
+}
+
+@media (max-width: 480px) {
+    .actions{
+        display: flex;
+        flex-direction: column;
+    }
+    .btnAddToCart{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
 }
