--- a/src/components/pages/Cart/Cart.css
+++ b/src/components/pages/Cart/Cart.css
@@ -1,6 +1,7 @@
 .cart-container {
-    padding: 20px;
-    max-width: 800px;
+    padding: 1rem;
+    min-width: 80%;
+    min-height: 50vh;
     margin: 0 auto;
     background-color: #f9f9f9;
     border-radius: 8px;
@@ -43,11 +44,12 @@
     font-size: 1.25rem;
     margin-bottom: 5px;
 }
-.box-quantity{
+
+.box-quantity {
     display: flex;
     flex-direction: row;
     align-content: center;
-    gap: 0.5rem;   
+    gap: 0.5rem;
 }
 
 .item-quantity,
