--- a/src/components/WhatsappButton/WhatsAppButton.scss
+++ b/src/components/WhatsappButton/WhatsAppButton.scss
@@ -1,25 +1,20 @@
-.whatsAppButton {
+.boxWhatssap {
     position: fixed;
     bottom: 2%;
     right: 2%;
     border-radius: 50%;
     width: 3rem;
     height: 3rem;
-    z-index: 9;
+    z-index: 9999;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
-}
 
-@media (max-width: 768px) {
-    .whatsAppButton {
-        bottom: 3%;
-        right: 3%;
+    @media (max-width:768px) {
+        .boxWhatssap {
+            bottom: 3%;
+            height: 3%;
+        }
     }
-}
-
-.whatsAppButton .icon {
-    width: 43%;
-    fill: black;
 }
