--- a/src/components/pages/NotFound/NotFound.scss
+++ b/src/components/pages/NotFound/NotFound.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh; /* Full viewport height */
+    height: 100vh; // Full viewport height
     text-align: center;
     padding: 20px;
     box-sizing: border-box;
@@ -12,12 +12,12 @@
 .not-found-image {
     max-width: 50%;
     height: auto;
-    max-height: 150px; /* Ajusta la altura máxima si es necesario */
+    max-height: 150px; // Ajusta la altura máxima si es necesario
     margin-bottom: 20px;
 }
 
 .not-found-text {
     font-size: 1.5rem;
     font-weight: bold;
-    color: #333; /* Ajusta el color del texto si es necesario */
+    color: #333; // Ajusta el color del texto si es necesario
 }
