--- a/src/components/pages/user/Login/Login.scss
+++ b/src/components/pages/user/Login/Login.scss
@@ -4,9 +4,9 @@
     align-items: center;
     height: 50vh;
     padding: 1rem;
-}
-
-.formLogin {
+  }
+  
+  .formLogin {
     display: flex;
     flex-direction: column;
     padding: 2rem;
@@ -16,28 +16,27 @@
     width: 100%;
     max-width: 400px;
     box-sizing: border-box;
-}
-
-.inputLogin {
+  }
+  
+  .inputLogin {
     margin-bottom: 1rem;
     padding: 0.75rem;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 1rem;
     box-sizing: border-box;
-}
-
-.inputLogin:focus {
-    outline: none;
-    border: 2px solid #25D366;
-
-}
-
-.inputLogin.error {
-    border-color: red;
-}
-
-.btnLogin {
+  
+    &:focus {
+      outline: none;
+      border: 2px solid #25D366;
+    }
+  
+    &.error {
+      border-color: red;
+    }
+  }
+  
+  .btnLogin {
     padding: 0.75rem;
     background-color: black;
     color: #fff;
@@ -46,78 +45,76 @@
     cursor: pointer;
     font-size: 1rem;
     transition: background-color 0.3s ease;
-}
-
-.btnLogin:hover {
-    background-color: #25D366;
-}
-
-.errorMessage {
+  
+    &:hover {
+      background-color: #25D366;
+    }
+  }
+  
+  .errorMessage {
     color: red;
-
-}
-
-.serverError {
+  }
+  
+  .serverError {
     color: red;
     font-size: 1rem;
     margin-bottom: 1rem;
     text-align: center;
-}
-
-.divForm {
+  }
+  
+  .divForm {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: 0.5rem;
-}
-
-.linkRegister {
+  }
+  
+  .linkRegister {
     margin-top: 1rem;
     text-align: center;
-}
-
-.linkRegister {
     color: grey;
     text-decoration: none;
     transition: color 0.3s ease;
-}
-
-.linkRegister:hover {
-    color: #25D366;
-}
-
-.password-field {
+  
+    &:hover {
+      color: #25D366;
+    }
+  }
+  
+  .password-field {
     position: relative;
-    margin-bottom: 1em; /* Ajusta el margen si es necesario */
-}
-
-.inputLogin {
-    width: 100%;
-    padding: 0.5em;
-    padding-right: 2.5em; /* Asegura suficiente espacio para el ícono */
-}
-
-.password-toggle {
-    position: absolute;
-    top: 35%;
-    right: 0.5em;
-    transform: translateY(-50%);
-    cursor: pointer;
-    font-size: 1.2em; /* Ajusta el tamaño según tu diseño */
-    color: #888; /* Ajusta el color si es necesario */
-    z-index: 10; /* Asegura que el ícono esté sobre el campo de entrada */
-    pointer-events: all; /* Asegura que el ícono sea clickeable */
-}
-@media (max-width: 480px) {
-    .formLogin {
-        padding: 1rem;
-    }
-
+    margin-bottom: 1em;
+  
     .inputLogin {
-        font-size: 0.875rem;
+      width: 100%;
+      padding: 0.5em;
+      padding-right: 2.5em;
     }
-
+  
+    .password-toggle {
+      position: absolute;
+      top: 35%;
+      right: 0.5em;
+      transform: translateY(-50%);
+      cursor: pointer;
+      font-size: 1.2em;
+      color: #888;
+      z-index: 10;
+      pointer-events: all;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .formLogin {
+      padding: 1rem;
+    }
+  
+    .inputLogin {
+      font-size: 0.875rem;
+    }
+  
     .btnLogin {
-        font-size: 0.875rem;
+      font-size: 0.875rem;
     }
-}
+  }
+  
