--- a/src/components/pages/user/Register/Register.scss
+++ b/src/components/pages/user/Register/Register.scss
@@ -1,3 +1,4 @@
+// Register.scss
 .mainRegister {
     display: flex;
     flex-direction: column;
@@ -5,11 +6,12 @@
     justify-content: center;
     padding: 2rem;
     width: 100%;
-    max-width: 500px;
+    max-width: 60%;
     background-color: #ffffff;
     margin: 0 auto;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
 }
 
 .formRegister {
@@ -32,12 +34,11 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     transition: border-color 0.3s ease;
-}
 
-
-.inputRegister:focus {
-    border: 2px solid #25D366;
-    outline: none;
+    &:focus {
+        border-color: #25D366;
+        outline: none;
+    }
 }
 
 .btnRegister {
@@ -49,43 +50,44 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.5s ease;
-}
 
-.btnRegister:hover {
-    background-color: #25D366;
+    &:hover {
+        background-color: #25D366;
+    }
 }
 
 .errorText {
     color: red;
     font-size: 0.875rem;
-   
 }
 
 .successMessage {
     background-color: #d4edda;
     color: #155724;
+    padding: 0.75rem;
+    border-radius: 5px;
 }
 
 .linkToLogin {
     margin-top: 1rem;
     text-align: center;
+
+    a {
+        color: grey;
+        text-decoration: none;
+        transition: color 0.3s ease;
+
+        &:hover {
+            color: #25D366;
+        }
+    }
 }
 
-.linkToLogin a {
-    color: grey;
-    text-decoration: none;
-    transition: color 0.3s ease;
-}
-
-.linkToLogin a:hover {
-    color: #25D366;
-}
-
-
-/* Responsive styles */
+// Responsive styles
 @media (max-width: 768px) {
     .mainRegister {
         padding: 1rem;
+        margin-block: 1rem;
     }
 
     .formRegister {
